--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.properties.hibernate.dialect.physical=org.hibernate.dialect.MySQL5Dia
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+
+spring.servlet.multipart.max-request-size=10MB
